# bigtalk

./: pyproject.toml
bigtalk/: booting.py  brokers.py  clients.py  command.py  configs.py  console.py  defines.py  encoder.py  handler.py  kernels.py  locater.py  loggers.py  methods.py  objects.py  package.py  parsers.py  persist.py  repeats.py  runtime.py  statics.py  threads.py  timings.py  utility.py  workdir.py
bigtalk/mirrors/: __init__.py
bigtalk/modules/: adm.py  atr.py  bsc.py  cfg.py  eml.py  fie.py  flt.py  fnd.py  irc.py  log.py  lst.py  mbx.py  mdl.py  ps.py  pth.py  rss.py  rst.py  shw.py  sil.py  srv.py  tbl.py  tdo.py  thr.py  tmr.py  udp.py  upt.py  web.py  wsd.py
bigtalk/network/: evidence.html  manual.html  objects.inv  reconsider.html  request.html  search.html
bigtalk/nucleus/: about.html  (+7 more)
examples/: atr.py  fnd.py  irc.py  log.py  lst.py  man.py  mbx.py  mdl.py  mod.py  pth.py  rss.py  rst.py  tdo.py  thr.py  tmr.py  udp.py  web.py  wsd.py
mods/: man.py
testing/: test_ainterface.py  test_asdict.py  test_brokers.py  test_client.py  test_clients.py  test_command.py  test_composite.py  test_configs.py  test_decoder.py  test_defines.py  test_encoder.py  test_engine.py  test_github.py  test_hackernews.py  test_handler.py  test_locater.py  test_loggers.py  test_message.py  test_methods.py  test_object.py  test_objects.py  test_opml.py  test_package.py  test_parsers.py  test_persist.py  test_repeats.py  test_runtime.py  test_statics.py  test_storage.py  test_threads.py  test_timings.py  test_types.py  test_utility.py  test_workdir.py  test_zzz.py
(+2 files in other folders)
