# This file is placed in the Public Domain.


[build-system]
requires = ["setuptools>=61.2", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "bigtalk"
version = "8"
authors = [
    {name = "Bart", email = "bthate@dds.nl" },
]
description = "Big Talk"
readme = "README.rst"
license = "Unlicense"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities"
]


[project.scripts]
"bigtalk" = "bigtalk.runtime:main"


[project.urls]
"home" = "https://pypi.org/project/bigtalk"
"bugs" = "https://github.com/bthate/bigtalk/issues"
"source" = "https://github.com/bthate/bigtalk"


[tool.setuptools]
packages = [
    'bigtalk',
    'bigtalk.modules',
    'bigtalk.network',
    'bigtalk.network.pdf',
    'bigtalk.network._static',
    'bigtalk.network._images'
]
include-package-data = true


[tool.setuptools.package-data]
"bigtalk.network"         = ["*"]
"bigtalk.network.pdf"     = ["*"]
"bigtalk.network._images" = ["*"]
"bigtalk.network._static" = ["*"]
